# pgviz

./: .gitignore  README.org  flake.nix
.github/workflows/: ci.yml
src/: Cargo.toml
src/src/: grammar.lalrpop  lib.rs
src/src/args/: mod.rs
src/src/filter/: mod.rs
src/src/filter/parser/: mod.rs
src/src/sql/: populate_table.sql  table_composite_unique_constraints.sql
