[package]
name = "pgviz"
version = "0.1.0"
edition = "2021"
authors = ["Travis Staton"]
description = """
Visualize PostgreSQL tables/foreign-key constraints
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "=4.4.18", features = ["derive"] }
futures = "0.3.30"
lalrpop-util = { version = "0.20.2", features = ["lexer"] }
postgres-types = "0.2.6"
tokio = { version = "1.37.0", features = ["net", "time", "process", "macros", "signal", "rt-multi-thread"] }
tokio-postgres = { version = "0.7.10", features = ["array-impls"] }

[[bin]]
name = "pgviz"

[build-dependencies]
lalrpop = "0.20.2"
